# speechCOMET

./: README.md  pyproject.toml
configs/: trainer.yaml
configs/models/: ranking_model.yaml  regression_model.yaml  speech_audio.yaml  speech_audiotext.yaml
scripts/: 01-get_data_text.py
speechcomet/cli/: compare.py  mbr.py  score.py  train.py
speechcomet/encoders/: base.py  bert.py  minilm.py  rembert.py  sonar.py  xlmr.py  xlmr_xl.py
speechcomet/models/: __init__.py  base.py
speechcomet/models/multitask/: unified_metric.py  xcomet_metric.py
speechcomet/models/ranking/: ranking_metric.py
speechcomet/models/regression/: referenceless.py  regression_metric.py  speech.py
