[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechcomet"
version = "2.2.7"
description = "Speech Translation Evaluation"
authors = [{ name = "Vilém Zouhar" }, { name = "Maike Züfle" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12.0"
keywords = ["Machine Translation", "Evaluation", "COMET"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentencepiece>=0.2.0",
    "pandas>=2.0",
    "transformers>=4.17",
    "pytorch-lightning>=2.0.0",
    "jsonargparse>=3.13.1",
    "torch>=1.6.0",
    "numpy>=2.0",
    "torchmetrics>=0.10.2",
    "sacrebleu>=2.0",
    "scipy>=1.5.4",
    "entmax>=1.1",
    "huggingface-hub",
    "protobuf>=4.24.4",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "sonar-space",
    "fairseq2",
]

[project.urls]
Homepage = "https://github.com/zouharvi/speechCOMET"
Repository = "https://github.com/zouharvi/speechCOMET"

[project.scripts]
speechcomet-train = 'speechcomet.cli.train:train_command'
speechcomet-score = 'speechcomet.cli.score:score_command'
speechcomet-compare = 'speechcomet.cli.compare:compare_command'
speechcomet-mbr = 'speechcomet.cli.mbr:mbr_command'

[tool.setuptools]
packages = ["speechcomet"]